feat: set up frontend project using supertokens framework

--- a/apps/frontend/.env
+++ b/apps/frontend/.env
@@ -1,1 +1,7 @@
 PORT=3333
+
+NEXT_PUBLIC_SUPERTOKENS_API_KEY=D835BOUafpXQMVrGpRBXp9NxV
+NEXT_PUBLIC_SUPERTOKENS_API_DOMAIN=http://localhost:7777
+NEXT_PUBLIC_SUPERTOKENS_APP_NAME=testing
+NEXT_PUBLIC_SUPERTOKENS_CONNECTION_URI=http://localhost:3567
+NEXT_PUBLIC_SUPERTOKENS_WEBSITE_DOMAIN=http://localhost:3333
