--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -6,9 +6,9 @@
     "node": ">=16.x"
   },
   "scripts": {
-    "dev": "next dev",
+    "start:dev": "PORT=3333 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=3333 next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,7 +21,7 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "supertokens-auth-react": "^0.28.1",
+    "supertokens-auth-react": "^0.29.0",
     "typescript": "4.9.4"
   }
 }
