feat: set up auth project using supertokens core

--- a/apps/auth-service/.env
+++ b/apps/auth-service/.env
@@ -1,1 +1,21 @@
 PORT=7777
+#NEST_DEBUG=true
+
+RABBITMQ_HOSTNAME=localhost
+RABBITMQ_PASSWORD=admin
+RABBITMQ_PORT=5672
+RABBITMQ_QUEUE=users_queue
+RABBITMQ_USERNAME=admin
+
+SUPERTOKENS_API_KEY=D835BOUafpXQMVrGpRBXp9NxV
+#SUPERTOKENS_API_DOMAIN=http://auth:7777 Only if you run this app from container
+SUPERTOKENS_API_DOMAIN=http://localhost:7777
+SUPERTOKENS_APP_NAME=testing
+#SUPERTOKENS_CONNECTION_URI=http://supertokens:3567 Only if you run this app from container
+SUPERTOKENS_CONNECTION_URI=http://localhost:3567
+#SUPERTOKENS_WEBSITE_DOMAIN=http://frontend:3333 Only if you run this app from container
+SUPERTOKENS_WEBSITE_DOMAIN=http://localhost:3333
+
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_SCOPES=["https://www.googleapis.com/auth/userinfo.profile"]
