feat(auth-service): create RABBITMQ_URI env var in .env file

--- a/apps/auth-service/.env
+++ b/apps/auth-service/.env
@@ -1,6 +1,7 @@
 PORT=7777
 #NEST_DEBUG=true
 
+RABBITMQ_URI=amqp://admin:admin@localhost:5672
 RABBITMQ_HOSTNAME=localhost
 RABBITMQ_PASSWORD=admin
 RABBITMQ_PORT=5672
@@ -18,4 +19,4 @@ SUPERTOKENS_WEBSITE_DOMAIN=http://localhost:3333
 
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_CLIENT_SECRET=
-GOOGLE_OAUTH_SCOPES=["https://www.googleapis.com/auth/userinfo.profile"]
+GOOGLE_OAUTH_SCOPES='https://www.googleapis.com/auth/userinfo.profile'
